fixed shrinked header z-index

--- a/css/ex3/header.css
+++ b/css/ex3/header.css
@@ -102,6 +102,7 @@
         font-size: 19px;
         font-weight: lighter;
         justify-content: center;
+        z-index: 1;
     }
 
     .shrinked-home-icon {
